Edge:
* [FEATURE] Mysql2::Errors are wrapped as ThinkingSphinx::SphinxErrors, with subclasses of SyntaxError and ParseError used appropriately. Syntax and parse errors do not prompt a retry on a new connection.
* [CHANGE] Use connection pool for search queries. If a query fails, it will be retried on a new connection before raising if necessary.
* [CHANGE] Glaze always passes methods through to the underlying ActiveRecord::Base object if they don't exist on any of the panes.
* [FIX] Don't override foreign keys for polymorphic association replacements.
* [FIX] Quote namespaced model names in class field condition.
* [FEATURE] Polymorphic associations can be used within index definitions when the appropriate classes are set out.
* [FEATURE] Allow custom strings for SQL joins in index definitions.
* [FIX] New lines are maintained and escaped in custom source queries.
* [FIX] Subclasses of indexed models fire delta callbacks properly.
* [FIX] Thinking Sphinx can be loaded via thinking/sphinx, to satisfy Bundler.
* [FEATURE] indexer and searchd settings are added to the appropriate objects from config/thinking_sphinx.yml (@ygelfand).
* [FIX] New lines are maintained and escaped in sql_query values.

2013-01-02: 3.0.0
* [CHANGE] Updating Riddle dependency to 1.5.4.
* [FIX] Respect source options as well as underlying settings via the set_property method in index definitions.
* [FIX] Load real-time index definitions when listing fields, attributes, and/or conditions.
* [CHANGE] UTF-8 is now the default charset again (as it was in earlier Thinking Sphinx versions).
* [FEATURE] Initial realtime index support, including the ts:generate task for building index datasets. Sphinx 2.0.6 is required.
* [CHANGE] Removing ts:version rake task.
* [FEATURE] SphinxQL connection pooling via the Innertube gem.

2012-12-22: 3.0.0.rc
* [FEATURE] Source type support (query and ranged query) for both attributes and fields. Custom SQL strings can be supplied as well.